services.yml
apiVersion: v1
kind: Service
metadata:
  name: paintapp-service
  namespace: default
spec:
  selector:
    app: paintapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
 
---

apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: default
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
