ingresses.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paintapp-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
    - host: paintapp.junder.ddns.net
      http:
        paths:
          - path: /paintapp
            pathType: Prefix
            backend:
              service:
                name: paintapp-service
                port:
                  number: 80
  tls:
    - hosts:
      - paintapp.junder.ddns.net
      secretName: secret
